--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="todo">TODO</string>
     <string name="todo1">TODO</string>
     <string name="todo2">TODO</string>
+    <string name="exit">exit</string>
 </resources>
